# udp-secure-chat

./: README.md
app/: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.sh
app/src/udp-secure-chat/: __about__.py  crypto_utils.py  server.py
app/src/udpsecurechat/: __init__.py  client.py  server.py
